try to fix image rescaling on mobile again pt 8

--- a/assets/main.css
+++ b/assets/main.css
@@ -48,6 +48,7 @@ img {
   vertical-align: middle; }
 
 .parent {
+  max-height: 400px;
   width: auto;
   margin: auto;
 }
@@ -66,6 +67,8 @@ img {
   max-width: 100%;
   max-height: 100%;
   position: absolute;
+  margin-left: auto;
+  margin-right: auto;
   top: 0;
   bottom: 0;
   left: 0;
